--- a/Forget Me Knot/Base.lproj/Main.storyboard
+++ b/Forget Me Knot/Base.lproj/Main.storyboard
@@ -270,7 +270,7 @@
                                 </constraints>
                             </view>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="Ina-9W-lnO">
-                                <rect key="frame" x="0.0" y="176" width="320" height="348"/>
+                                <rect key="frame" x="0.0" y="176" width="320" height="336"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="ItemCell" id="x9z-QX-g0C" customClass="ItemCell" customModule="Forget_Me_Knot" customModuleProvider="target">
@@ -288,10 +288,10 @@
                                 </connections>
                             </tableView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" hasAttributedTitle="YES" translatesAutoresizingMaskIntoConstraints="NO" id="9Bn-aH-DSJ">
-                                <rect key="frame" x="0.0" y="524" width="320" height="44"/>
+                                <rect key="frame" x="0.0" y="512" width="320" height="56"/>
                                 <color key="backgroundColor" red="0.83921568627450982" green="0.40392156862745099" blue="0.80392156862745101" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="44" id="YWN-RY-8pm"/>
+                                    <constraint firstAttribute="height" constant="56" id="YWN-RY-8pm"/>
                                 </constraints>
                                 <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <state key="normal">
@@ -327,7 +327,7 @@
                     <nil key="simulatedStatusBarMetrics"/>
                     <connections>
                         <outlet property="descriptionTextField" destination="mbw-kR-bI9" id="QTr-bh-Nl2"/>
-                        <outlet property="doneButton" destination="9Bn-aH-DSJ" id="qm1-3Q-v52"/>
+                        <outlet property="doneButtonHeightConstraint" destination="YWN-RY-8pm" id="7lX-t4-sh3"/>
                         <outlet property="nameTextField" destination="igR-et-osI" id="HA9-R0-HHx"/>
                         <outlet property="tableView" destination="Ina-9W-lnO" id="EHJ-VB-Dal"/>
                     </connections>
