Hide contentContainerView when there is empty list
Instead of looping through all subviews, simply hide/show contentContainerView, which contains all the main views (except noListsStackView)

--- a/Forget Me Knot/Base.lproj/Main.storyboard
+++ b/Forget Me Knot/Base.lproj/Main.storyboard
@@ -262,7 +262,7 @@
                                     <constraint firstItem="qiH-vQ-tXK" firstAttribute="top" relation="greaterThanOrEqual" secondItem="d0B-kf-2r6" secondAttribute="top" constant="12" id="yjt-6G-12W"/>
                                 </constraints>
                             </view>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="Ina-9W-lnO">
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" keyboardDismissMode="interactive" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="Ina-9W-lnO">
                                 <rect key="frame" x="0.0" y="176" width="320" height="336"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <color key="tintColor" red="0.31372549019607843" green="0.82352941176470584" blue="0.76078431372549016" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
