Squashed commit of the following:
commit a8d350c3263bb94df93a951b8bd3cd1106c30ef3
Author: Emmanuoel Haroutunian <emmanuoel.h@gmail.com>
Date:   Mon Mar 20 03:12:37 2017 -0700

    Remove minimumLineSpacing

commit 463ef085a756634b74b070897d4951c0e0765555
Author: Emmanuoel Haroutunian <emmanuoel.h@gmail.com>
Date:   Mon Mar 20 02:53:10 2017 -0700

    Set launchscreen image

commit b15b20a5b9cd9169cf1ac70c42fce44d1dcfacce
Author: Emmanuoel Haroutunian <emmanuoel.h@gmail.com>
Date:   Mon Mar 20 02:51:05 2017 -0700

    Hide contentContainerView when there is empty list

    Instead of looping through all subviews, simply hide/show contentContainerView, which contains all the main views (except noListsStackView)

commit 8e30826f337686a502dbd6fca7a505aa68ced5e8
Author: Emmanuoel Haroutunian <emmanuoel.h@gmail.com>
Date:   Mon Mar 20 02:43:09 2017 -0700

    Minor formatting, deleting empty lines

commit 42b27d992b03b9ee15bb8698d10ccc9064816c84
Author: Emmanuoel Haroutunian <emmanuoel.h@gmail.com>
Date:   Mon Mar 20 02:32:11 2017 -0700

    Change tint color of table view in AddListVC

commit eb0d6f77342681d21535995a84e8643d36f0e61a
Author: Emmanuoel Haroutunian <emmanuoel.h@gmail.com>
Date:   Mon Mar 20 02:31:58 2017 -0700

    Tweak spacing between Tab Items

commit 86f4be4bc2cad8b61b7dc6eac51679d6b2bf8c17
Author: Emmanuoel Haroutunian <emmanuoel.h@gmail.com>
Date:   Mon Mar 20 02:28:31 2017 -0700

    Apply light blue tints to navigation bar and AddListVC’s table view

commit dc1a7210fd2321d7a4c78216837b40db4a83cf80
Author: Emmanuoel Haroutunian <emmanuoel.h@gmail.com>
Date:   Mon Mar 20 02:25:24 2017 -0700

    Increase spacing between tab items

commit 2355a8a79e5c27a798a18006dcc8513e3640e710
Author: Emmanuoel Haroutunian <emmanuoel.h@gmail.com>
Date:   Mon Mar 20 02:22:33 2017 -0700

    Add corner radius to tab cells

commit 0ed153702eb53364ece4959c0c134002e6a1448d
Author: Emmanuoel Haroutunian <emmanuoel.h@gmail.com>
Date:   Mon Mar 20 02:20:16 2017 -0700

    Re

--- a/Forget Me Knot/Base.lproj/Main.storyboard
+++ b/Forget Me Knot/Base.lproj/Main.storyboard
@@ -162,21 +162,15 @@
                                     <constraint firstItem="eDu-0c-Kdi" firstAttribute="top" secondItem="eU5-yb-AYP" secondAttribute="bottom" id="x7Y-Vr-pid"/>
                                 </constraints>
                             </view>
-                            <activityIndicatorView hidden="YES" opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" hidesWhenStopped="YES" style="white" translatesAutoresizingMaskIntoConstraints="NO" id="jlq-5b-DFj">
-                                <rect key="frame" x="150" y="254" width="20" height="20"/>
-                                <color key="color" red="0.0" green="0.72549019609999998" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                            </activityIndicatorView>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="iK7-gm-hJ7" secondAttribute="bottom" id="5EC-Bb-uTI"/>
                             <constraint firstItem="ssP-Fh-a9Q" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="81C-GV-G1d"/>
                             <constraint firstItem="ssP-Fh-a9Q" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="EQX-aW-VzE"/>
-                            <constraint firstItem="jlq-5b-DFj" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="KSc-9m-xQ1"/>
                             <constraint firstItem="iK7-gm-hJ7" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="O1n-Yi-rCR"/>
                             <constraint firstItem="iK7-gm-hJ7" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" id="OEl-KC-6JR"/>
                             <constraint firstAttribute="trailing" secondItem="iK7-gm-hJ7" secondAttribute="trailing" id="S8Y-yp-tJ1"/>
-                            <constraint firstItem="jlq-5b-DFj" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" constant="-20" id="o1I-PI-KO7"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="7MX-iO-IhS">
@@ -189,7 +183,6 @@
                     </navigationItem>
                     <nil key="simulatedStatusBarMetrics"/>
                     <connections>
-                        <outlet property="activityIndicator" destination="jlq-5b-DFj" id="1cu-pz-qTt"/>
                         <outlet property="collectionView" destination="C2W-n4-dZS" id="CvA-pb-gZY"/>
                         <outlet property="contentContainerView" destination="iK7-gm-hJ7" id="eSj-Bg-l1V"/>
                         <outlet property="flowLayout" destination="BCV-ZO-6fh" id="uRs-8L-GQ7"/>
@@ -269,9 +262,10 @@
                                     <constraint firstItem="qiH-vQ-tXK" firstAttribute="top" relation="greaterThanOrEqual" secondItem="d0B-kf-2r6" secondAttribute="top" constant="12" id="yjt-6G-12W"/>
                                 </constraints>
                             </view>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="Ina-9W-lnO">
-                                <rect key="frame" x="0.0" y="176" width="320" height="348"/>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" keyboardDismissMode="interactive" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="Ina-9W-lnO">
+                                <rect key="frame" x="0.0" y="176" width="320" height="336"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <color key="tintColor" red="0.31372549019607843" green="0.82352941176470584" blue="0.76078431372549016" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="ItemCell" id="x9z-QX-g0C" customClass="ItemCell" customModule="Forget_Me_Knot" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="28" width="320" height="44"/>
@@ -288,10 +282,10 @@
                                 </connections>
                             </tableView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" hasAttributedTitle="YES" translatesAutoresizingMaskIntoConstraints="NO" id="9Bn-aH-DSJ">
-                                <rect key="frame" x="0.0" y="524" width="320" height="44"/>
+                                <rect key="frame" x="0.0" y="512" width="320" height="56"/>
                                 <color key="backgroundColor" red="0.83921568627450982" green="0.40392156862745099" blue="0.80392156862745101" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="44" id="YWN-RY-8pm"/>
+                                    <constraint firstAttribute="height" constant="56" id="YWN-RY-8pm"/>
                                 </constraints>
                                 <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <state key="normal">
@@ -327,7 +321,7 @@
                     <nil key="simulatedStatusBarMetrics"/>
                     <connections>
                         <outlet property="descriptionTextField" destination="mbw-kR-bI9" id="QTr-bh-Nl2"/>
-                        <outlet property="doneButton" destination="9Bn-aH-DSJ" id="qm1-3Q-v52"/>
+                        <outlet property="doneButtonHeightConstraint" destination="YWN-RY-8pm" id="7lX-t4-sh3"/>
                         <outlet property="nameTextField" destination="igR-et-osI" id="HA9-R0-HHx"/>
                         <outlet property="tableView" destination="Ina-9W-lnO" id="EHJ-VB-Dal"/>
                     </connections>
@@ -345,6 +339,7 @@
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="W9Z-N0-dud">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
+                        <color key="tintColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                         <color key="barTintColor" red="0.0" green="0.72549019607843135" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     </navigationBar>
                     <nil name="viewControllers"/>
